@@ -4417,185 +4417,6 @@ block|}
 block|}
 annotation|@
 name|Test
-DECL|method|testUpgradeStatusReport ()
-specifier|public
-name|void
-name|testUpgradeStatusReport
-parameter_list|()
-block|{
-name|short
-name|status
-init|=
-literal|6
-decl_stmt|;
-name|int
-name|version
-init|=
-literal|15
-decl_stmt|;
-name|String
-name|EXPECTED__NOTF_PATTERN
-init|=
-literal|"Upgrade for version {0} has been completed.\nUpgrade is not finalized."
-decl_stmt|;
-name|String
-name|EXPECTED_PATTERN
-init|=
-literal|"Upgrade for version {0} is in progress. Status = {1}%"
-decl_stmt|;
-name|UpgradeStatusReport
-name|upgradeStatusReport
-init|=
-operator|new
-name|UpgradeStatusReport
-argument_list|(
-name|version
-argument_list|,
-name|status
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|getVersion
-argument_list|()
-operator|==
-name|version
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|getUpgradeStatus
-argument_list|()
-operator|==
-name|status
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|isFinalized
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-name|MessageFormat
-operator|.
-name|format
-argument_list|(
-name|EXPECTED_PATTERN
-argument_list|,
-name|version
-argument_list|,
-name|status
-argument_list|)
-argument_list|,
-name|upgradeStatusReport
-operator|.
-name|getStatusText
-argument_list|(
-literal|true
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|status
-operator|+=
-literal|100
-expr_stmt|;
-name|upgradeStatusReport
-operator|=
-operator|new
-name|UpgradeStatusReport
-argument_list|(
-name|version
-argument_list|,
-name|status
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
-name|assertFalse
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|isFinalized
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|toString
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-name|MessageFormat
-operator|.
-name|format
-argument_list|(
-name|EXPECTED__NOTF_PATTERN
-argument_list|,
-name|version
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|getStatusText
-argument_list|(
-literal|false
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|MessageFormat
-operator|.
-name|format
-argument_list|(
-name|EXPECTED__NOTF_PATTERN
-argument_list|,
-name|version
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|upgradeStatusReport
-operator|.
-name|getStatusText
-argument_list|(
-literal|true
-argument_list|)
-operator|.
-name|equals
-argument_list|(
-name|MessageFormat
-operator|.
-name|format
-argument_list|(
-name|EXPECTED__NOTF_PATTERN
-argument_list|,
-name|version
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-annotation|@
-name|Test
 DECL|method|testAuthority ()
 specifier|public
 name|void
